# el7008

./: .gitignore  README.md
proyecto/object_pose_estimation/: CMakeLists.txt  package.xml
proyecto/object_pose_estimation/include/object_pose_estimation/: SQTypes.h
proyecto/object_pose_estimation/src/: OPEUtils.cpp  ObjectPoseEstimator.cpp  PointCloudCapture.cpp
proyecto/object_psd/: CMakeLists.txt  package.xml
proyecto/object_psd/cfg/: PSD.cfg  VoxelGrid.cfg
proyecto/object_psd/config/: config.rviz  config_lab.rviz
proyecto/object_psd/include/object_psd/: object_matcher.h  pcl_util.h  sample_superquadric.h
proyecto/object_psd/launch/: asus.launch  complete.launch  objetc_psd.launch  test.launch
proyecto/object_psd/msg/: ObjectShape.msg
proyecto/object_psd/src/: object_psd.cpp  pc_filter.cpp  sphere_matcher.cpp
t1/: CMakeLists.txt  README.md  make.sh  t1
t1/src/: conv.cpp  histeq.cpp  median.cpp
t1/src/src_conv/: main_conv.cpp
t1/src/src_histeq/: main_histeq.cpp
t1/src/src_median/: CMakeLists.txt  main_median.cpp
t2/: CMakeLists.txt  README.md  t2
t2/src/: filter.cpp  main.cpp
t3/: CMakeLists.txt  README.md  t3
t3/src/: main.cpp
t4/: CMakeLists.txt  README.md  complete_roc.csv  t4
t4/db/: 0024_roc.cvs  0119_roc.cvs  0121_roc.cvs  0125_roc.cvs  0159_roc.cvs  0178_roc.cvs  0179_roc.cvs  0180_roc.cvs  0183_roc.cvs  0184_roc.cvs  0185_roc.cvs  0200_roc.cvs  0201_roc.cvs  0223_roc.cvs  0228_roc.cvs  0232_roc.cvs  0237_roc.cvs  0245_roc.cvs  0270_roc.cvs  0273_roc.cvs  0281_roc.cvs  0293_roc.cvs  0294_roc.cvs  0295_roc.cvs  0296_roc.cvs  0307_roc.cvs  0313_roc.cvs  0315_roc.cvs  0323_roc.cvs  0327_roc.cvs  0352_roc.cvs  0359_roc.cvs  0396_roc.cvs  0397_roc.cvs  0428_roc.cvs  0491_roc.cvs  0515_roc.cvs  0517_roc.cvs  0522_roc.cvs  0523_roc.cvs  (+4 more)
t4/src/: main.cpp  plot.py  plot_complete.py
t5/: CMakeLists.txt  README.md  svm.xml  t5
t5/src/: main.cpp
