<?xml version="1.0"?>
<package format="2">
  <name>object_pose_estimation</name>
  <version>0.0.1</version>
  <description>
    object_pose_estimation
  </description>
  <maintainer email="rorro.mr@gmail.com">Rodrigo Munoz</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>libpcl-all-dev</depend>
</package>